# NY-COLLISION

./: .gitignore  CMakeLists.txt  DataRecord.h  ICSVParser.h  MyDataSet.cpp  MyDataSet.h  QuoteAwareCSVParser.cpp  QuoteAwareCSVParser.h  README.md  main.cpp
cmake/: nycollision-config.cmake.in
include/nycollision/: CollisionAnalyzer.h  DataSet.h  IDataSet.h  IParser.h  IRecord.h  Types.h
include/nycollision/core/: AlignedAllocator.h  Config.h  Record.h
include/nycollision/data/: DataSet.h  IDataSet.h  VectorizedDataSet.h
include/nycollision/parser/: CSVParser.h  IParser.h
include/nycollision/util/: CollisionAnalyzer.h
src/: CSVParser.cpp  DataSet.cpp  VectorizedDataSet.cpp
